fix z-index of 'more' button overlay

--- a/juniorguru/web/static/src/css/more.scss
+++ b/juniorguru/web/static/src/css/more.scss
@@ -23,4 +23,5 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  z-index: 50;
 }
